tests/NormalTests/paczka1/small_fuzzy/17304112.err
Error in line 3: 96Y S231 72,2
Error in line 1: E7h S799 55,6
